syntax = "proto3";

// Require Go Package
option go_package = "/models";

// Sent on Data Transfer to Add piece of File - Binary
message Chunk {
  bytes buffer = 1;    // Binary Value of Chunk
  int32 size = 2;      // Size of this Chunk
  bool isComplete = 3; // Whether this is final chunk
}

// Traffic Direction of Session
enum Direction {
  Default = 0;  // From Memory/Viewing
  Incoming = 1; // Incoming Transfer
  Outgoing = 2; // Outgoing Transfer
}

// Current Node Lifecycle State
enum LifecycleState {
  Active = 0;  // Resume or Start
  Paused = 1;  // User Paused
  Stopped = 2; // User Quit
}

// Current Node Service Client State
message ServiceStatus {
  bool auth = 1;    // Auth Service
  bool device = 2;  // Device Service
  bool mailbox = 3; // Textile-Mailbox Service
  bool threads = 4; // Textile-Threads Service
  bool buckets = 5; // Textile-Buckets Service
  bool http = 6;    // HTTP Service
}

// Sonr Default Protocols
enum SonrProtocol {
  Unspecified = 0;    // Default Value
  Authorize = 1;      // Auth Protocol for Invite/Response
  Devices = 2;        // Device Protocol for User Linked Devices
  Linker = 3;         // Protocol for Linking Device to User
  LocalTransfer = 4;  // Protocol for Local Transfer to Peer
  RemoteTransfer = 5; // Protocol for Remote Transfer to Peer
}
